# thesis-tntsegmentation

./: .gitignore  README.md  evaluation_metrics.txt  pyproject.toml
meerjeling-scikit-playground/: fillingholes.py  filters.py  morphology.py
nn/: training.py
nn/models/: unet3d_basic.py
scripts/: aggregateacrossquads.py  aggregateanalysis.py  archcomparisonquad.py  benchmark.py  config.py  create_metric_tables.py  estimate_label_size.py  evaluate_all_quads.sh  evaluate_models.py  evaluationarch.py  inference.py  inference_tiles.py  postprocess.py  quadbasedanalysis.py  quadbasedanalysisnew.py  run.sh  run_overlap_study.sh  tilingutilities.py  train_all_quads.sh  training.py  training.sh  training_utils.py  visualize_models.py
scripts/experiment-random-permutation-z-axis/: evaluation_metrics.csv
scripts/graphs/: aggregateacrossquads.py  aggregateanalysis.py  archcomparisonquad.py  create_metric_tables.py  estimate_label_size.py  quadbasedanalysis.py  visualize_models.py
tests/: testsizes.py
tests/metrics/: test_focal.py
tntseg/nn/: csnet_affinity_modules.py  modules.py  squeeze_excitation.py
tntseg/nn/models/: anisounet3d_basic.py  anisounet3d_csnet.py  anisounet3d_seblock.py  anisounet3d_usenet.py  unet3d_basic.py
tntseg/utilities/dataset/: analyze.py  datasets.py  split_data.py  split_datav2.py  test_padding.py
tntseg/utilities/metrics/: metrics.py  metrics_torch.py
utilities/dataset/: datasets.py  split_data.py  test_padding.py
