[project]
name = "playground-good-data-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio-volumentations>=1.3.2",
    "imagecodecs>=2025.3.30",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
torch-cpu = [
    "torch==2.6.0",
    "torchvision==0.21.0"
]
torch-gpu = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124"
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
