[project]
name = "tntseg"
authors = [
    {name = "Bruno Petrus", email="brunoxpetrus@gmail.com"}
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "bio-volumentations>=1.3.2",
    "flit>=3.12.0",
    "imagecodecs>=2025.3.30",
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "mlflow[torch-cpu]>=3.1.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pyqt5>=5.15.11",
    "pytest>=8.4.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch-summary>=1.4.5",
    "tqdm>=4.66.5",
]

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
torch-cpu = [
    "torch==2.6.0",
    "torchvision==0.21.0"
]
torch-gpu = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124"
]


[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu124"]
